force-app/main/default/objects/FileStoragePE__e/FileStoragePE__e.object-meta.xml
<CustomObject>
    <label>FileStoragePE</label>
    <pluralLabel>FileStoragePE</pluralLabel>
</CustomObject>