force-app/main/default/objects/FileStoragePE__e/fields/FileStagingCreatedById__c.field-meta.xml
<CustomField>
    <fullName>FileStagingCreatedById__c</fullName>
    <label>FileStagingCreatedById</label>
    <length>20</length>
    <type>Text</type>
</CustomField>