force-app/main/default/objects/FileStoragePE__e/fields/FileStagingProviderId__c.field-meta.xml
<CustomField>
    <fullName>FileStagingProviderId__c</fullName>
    <label>FileStagingProviderId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>