force-app/main/default/objects/FileStoragePE__e/fields/FileStagingRecordId__c.field-meta.xml
<CustomField>
    <fullName>FileStagingRecordId__c</fullName>
    <label>FileStagingId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>