force-app/main/default/objects/FileStoragePE__e/fields/FileStagingReportingCategory__c.field-meta.xml
<CustomField>
    <fullName>FileStagingReportingCategory__c</fullName>
    <label>FileStagingReportingCategory</label>
    <length>20</length>
    <type>Text</type>
</CustomField>