force-app/main/default/objects/FileStoragePE__e/fields/FileStagingReportingPeriodId__c.field-meta.xml
<CustomField>
    <fullName>FileStagingReportingPeriodId__c</fullName>
    <label>FileStagingReportingPeriodId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>