force-app/main/default/objects/FileStoragePE__e/fields/FileStagingRequestedById__c.field-meta.xml
<CustomField>
    <fullName>FileStagingRequestedById__c</fullName>
    <label>FileStagingRequestedById</label>
    <length>20</length>
    <type>Text</type>
</CustomField>