force-app/main/default/objects/FileStoragePE__e/fields/FileStorageFileName__c.field-meta.xml
<CustomField>
    <fullName>FileStorageFileName__c</fullName>
    <label>FileStorageFileName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>