force-app/main/default/objects/FileStoragePE__e/fields/FileStorageURI__c.field-meta.xml
<CustomField>
    <fullName>FileStorageURI__c</fullName>
    <label>FileStorageURI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>